Feat: Añado una lista con 4 elementos

--- a/6-navegador-html-css/6.1-html/index.html
+++ b/6-navegador-html-css/6.1-html/index.html
@@ -11,5 +11,12 @@
     <h2>Este es un subtitulo Nivel 2</h2>
     <h3>Este es un subtitulo Nivel 3</h3>
     <h4>Este es un subtitulo Nivel 4</h4>
+    <p>Este es mi primer parrafo con el comando &lt;p&gt; </p>
+    <ul>
+        <li>Este es mi primer elemento en una lista</li>
+        <li>segundo elemento de lista</li>
+        <li>tercer elemento de lista</li>
+        <li>cuarto elemento de lista</li>
+    </ul>
 </body>
 </html>
