Feat: Añado una lista con 4 elementos y creo un html con elementos de estructura

--- a/6-navegador-html-css/6.1-html/index.html
+++ b/6-navegador-html-css/6.1-html/index.html
@@ -7,16 +7,17 @@
     <title>Mi primer HTML</title>
 </head>
 <body>
-    <h1>Bienvenidos a mi primer HTML</h1>
+    <h1>Bienvenidos a mi primer HTML <a href="https://www.instagram.com/">Instagram</a></h1>
     <h2>Este es un subtitulo Nivel 2</h2>
     <h3>Este es un subtitulo Nivel 3</h3>
     <h4>Este es un subtitulo Nivel 4</h4>
-    <p>Este es mi primer parrafo con el comando &lt;p&gt; </p>
+    <p>Este es mi primer parrafo con el comando &lt;p&gt; <a href="https://www.instagram.com/">Instagram</a></p>
     <ul>
         <li>Este es mi primer elemento en una lista</li>
         <li>segundo elemento de lista</li>
-        <li>tercer elemento de lista</li>
+        <li>tercer elemento de lista <a href="https://www.instagram.com/">Instagram</a></li>
         <li>cuarto elemento de lista</li>
     </ul>
+    <a href="https://www.instagram.com/">Instagram</a>
 </body>
 </html>
