Feat: Añado ejemplos de uso de imagenes

--- a/6-navegador-html-css/6.1-html/elementos-estructura.html
+++ b/6-navegador-html-css/6.1-html/elementos-estructura.html
@@ -15,12 +15,17 @@
         <h2>Hola</h2>
         <ul>
             <li>Hola</li>
-            <li>Hola</li>
+            <li><a href="#monos">Vamos a las imagenes</a></li>
             <li>Hola</li>
         </ul>
     </div>
     <div>
         <h2>Hola</h2>
     </div>
+    <div id="monos">
+        <img src="https://empresas.infoempleo.com/hrtrends/media/2018/06/HRTRENDS_RECLUTAMIENTO-Competencias_genericas538686298.jpg" alt="Personas trabajando" style="height: 400px;">
+        <img src="./assets/ajedrez.jpeg" alt="Imagen de ajedrez" style="height: 400px;">
+    </div>
+    
 </body>
 </html>
