Feat: Se añaden links de html dentro del proyecto

--- a/6-navegador-html-css/6.1-html/elementos-estructura.html
+++ b/6-navegador-html-css/6.1-html/elementos-estructura.html
@@ -14,7 +14,7 @@
     <div>
         <h2>Hola</h2>
         <ul>
-            <li>Hola</li>
+            <li><a href="./formulario.html">Formulario</a></li>
             <li><a href="#monos">Vamos a las imagenes</a></li>
             <li>Hola</li>
         </ul>
