--- a/6-navegador-html-css/6.1-html/formulario.html
+++ b/6-navegador-html-css/6.1-html/formulario.html
@@ -34,5 +34,8 @@
             <button>Enviar</button>
         </form>
     </div>
+    <div>
+        <h2><a href="./index.html">Home</a></h2>
+    </div>
 </body>
 </html>
