--- a/6-navegador-html-css/6.1-html/index.html
+++ b/6-navegador-html-css/6.1-html/index.html
@@ -14,7 +14,7 @@
     <p>Este es mi primer parrafo con el comando &lt;p&gt; <a href="https://www.instagram.com/">Instagram</a></p>
     <ul>
         <li>Este es mi primer elemento en una lista</li>
-        <li>segundo elemento de lista</li>
+        <li><a href="./elementos-estructura.html" target="_blank" rel="noopener noreferrer">Elementos</a></li>
         <li>tercer elemento de lista <a href="https://www.instagram.com/">Instagram</a></li>
         <li>cuarto elemento de lista</li>
     </ul>
