Feat: Se añaden estilos a textos y divs

--- a/6-navegador-html-css/6.1-html/elementos-estructura.html
+++ b/6-navegador-html-css/6.1-html/elementos-estructura.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elementos de estructura</title>
 </head>
-<body>
-    <div>
-        <H1>Hola</H1>
+<body style="background-color: #cdb4db;">
+    <div style="background-color: #a2d2ff;">
+        <H1 style="background-color: #023047; color: #bde0fe; font-size: 200px;">Hola</H1>
         <p>Hola</p>
     </div>
     <div>
