--- a/6-navegador-html-css/6.1-html/index.html
+++ b/6-navegador-html-css/6.1-html/index.html
@@ -7,7 +7,7 @@
     <title>Mi primer HTML</title>
 </head>
 <body>
-    <h1>Bienvenidos a mi primer HTML <a href="https://www.instagram.com/">Instagram</a></h1>
+    <h1 style="color: blue;">Bienvenidos a mi primer HTML</h1>
     <h2>Este es un subtitulo Nivel 2</h2>
     <h3>Este es un subtitulo Nivel 3</h3>
     <h4>Este es un subtitulo Nivel 4</h4>
